# linkedbot

./: .env.example  .gitignore  DEPLOY.md  EMAIL_SETUP.md  EMAIL_SETUP.zh.md  LOCAL_DEV.md  PRD.md  PRD.zh.md  README.md  README.zh.md  SAML_SSO_DESIGN.md  SAML_SSO_DESIGN.zh.md  init-cloudflare.sh  package-lock.json  package.json  scratch_refactor.py  server_test.py  test-local.sh  test_e2e.py  test_webhook.py  tsconfig.json  webhook-hermes.md  webhook-hermes.zh.md  worker-configuration.d.ts  wrangler.jsonc  需求.md
.github/workflows/: release.yml
client/: .env.example  channel_client.py
client-rs/: Cargo.toml
client-rs/src/: api.rs  client.rs  config.rs  main.rs  receiver.rs  sse.rs
client/channel-client/src/: sse.rs
client/rust/: .env.example  Cargo.toml
client/rust/src/: main.rs  sse.rs
migrations/d1/: 0001_initial.sql  0002_enhancements.sql  0003_channels.sql  0004_add_email_channel.sql  0005_rename_sendbox_to_mailbox.sql
public/: style.css
src/: index.tsx  queue-consumer.ts  types.ts
src/i18n/: en.ts  index.ts  zh.ts
src/lib/: access.ts  crypto.ts  forwarder.ts  helpers.ts  rules.ts
src/middleware/: i18n.ts  jwt.ts  session.ts
src/pages/: ChannelDetail.tsx  Dashboard.tsx  ForwardLogs.tsx  Layout.tsx  Login.tsx  Register.tsx
src/routes/: auth.ts  channels.ts  forwards.ts  members.ts  rules.ts  stats.ts  stream.ts  sync.ts  ui.tsx  webhook.ts
