[package]
name = "channel-client"
version = "0.1.0"
edition = "2021"
description = "ChannelClient — 内网穿透代理，连接 ChannelServer 实现 Webhook 转发"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "local-time"] }
futures-util = "0.3"
bytes = "1"
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
