[package]
name = "channel-client"
version = "0.1.0"
edition = "2021"
description = "ChannelClient — 内网穿透代理，连接 ChannelServer 实现 Webhook 转发（Rust 实现）"

[[bin]]
name = "channel-client"
path = "src/main.rs"

[dependencies]
# HTTP 客户端（支持 SSE 流式读取）
reqwest = { version = "0.12", features = ["json", "stream"] }
# 异步运行时
tokio = { version = "1", features = ["full"] }
# JSON 序列化/反序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 环境变量 / .env 文件加载
dotenvy = "0.15"
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 错误处理
anyhow = "1"
# 命令行参数解析
clap = { version = "4", features = ["derive"] }
# 异步流工具
futures-util = "0.3"
